# sillyAgent-backend

./: .gitignore  README.md  config.py  pyproject.toml  run_server.py
src/backend/: app.py
src/backend/api/: __init__.py  manager_agent.py
src/llm/: base_llm.py
src/multi_agent/: agent.py
src/multi_agent/agents/: llm_agent.py  manager_agent.py  rag_agent.py  tool_agent.py
src/multi_agent/mcp/: client.py
src/multi_agent/skills/: SKILL.md  __init__.py  registry.py
src/multi_agent/skills/amap-maps-around-search/: SKILL.md
src/multi_agent/skills/amap-maps-direction-bicycling/: SKILL.md
src/multi_agent/skills/amap-maps-direction-driving/: SKILL.md
src/multi_agent/skills/amap-maps-direction-transit/: SKILL.md
src/multi_agent/skills/amap-maps-direction-walking/: SKILL.md
src/multi_agent/skills/amap-maps-distance/: SKILL.md
src/multi_agent/skills/amap-maps-geo/: SKILL.md
src/multi_agent/skills/amap-maps-ip-location/: SKILL.md
src/multi_agent/skills/amap-maps-regeocode/: SKILL.md
src/multi_agent/skills/amap-maps-schema-navi/: SKILL.md
src/multi_agent/skills/amap-maps-schema-personal-map/: SKILL.md
src/multi_agent/skills/amap-maps-schema-take-taxi/: SKILL.md
src/multi_agent/skills/amap-maps-search-detail/: SKILL.md
src/multi_agent/skills/amap-maps-text-search/: SKILL.md
src/multi_agent/skills/amap-maps-weather/: SKILL.md
src/multi_agent/skills/web-search/: SKILL.md
src/multi_agent/statetype/: manager.py
src/utils/: logger.py
